<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="#758CC5"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/bmiimage"
        android:contentDescription="@string/my_image_desc" />

    <!-- Weight Input -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditWeight"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/edtWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintWeight"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="16dp" />

    <!-- Height in Feet -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditHeightFt"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"/>
    <EditText
        android:id="@+id/edtHeightFt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintHeightIn"
        android:inputType="number"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="16dp"/>

    <!-- Height in Inches -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditHeightInc"
        android:textSize="16sp"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/edtHeightInc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintHeightIn"
        android:inputType="number"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="20dp"/>

    <!-- Calculate Button -->
    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CalcBtn"
        android:padding="12dp"
        android:layout_marginBottom="20dp"/>

    <!-- Result Display -->
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ResTxt"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

</LinearLayout>
